--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,15 +2,402 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !pip install hydrafloods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=2cHg6wU_zWdynYZPYE8ZNpABENzJTvyFN2ArHq-7wFQ&tc=-0E8XE0F1T6-CzT8gn8Zd4BNZGhxuIRJDcGSri38Skk&cc=S8sYCH9EbYJjr19RhBHYtt_RSvrdrkjXuZ3fU0UR09w>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=2cHg6wU_zWdynYZPYE8ZNpABENzJTvyFN2ArHq-7wFQ&tc=-0E8XE0F1T6-CzT8gn8Zd4BNZGhxuIRJDcGSri38Skk&cc=S8sYCH9EbYJjr19RhBHYtt_RSvrdrkjXuZ3fU0UR09w</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hydrafloods as hf\n",
+    "import ee\n",
+    "\n",
+    "# initialize GEE\n",
+    "# ee.Authenticate()\n",
+    "ee.Initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = \"2019-10-05\"\n",
+    "end_time   =  \"2019-10-06\"\n",
+    "region     = ee.Geometry.Rectangle([104, 11.5, 106, 12.5 ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = hf.datasets.Sentinel1(region, start_time, end_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_imgs = s1.apply_func(\n",
+    "                            hf.thresholding.edge_otsu,\n",
+    "                            initial_threshold=-14,\n",
+    "                            thresh_no_data=-20,\n",
+    "                            edge_buffer=300\n",
+    "                          )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_map = ee.Image(water_imgs.collection.mode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hf.geeutils.export_image(\n",
+    "    water_map,\n",
+    "    region,\n",
+    "    \"users/mafmonjaraz/water_map_example\",\n",
+    "    scale=30,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install folium\n",
+    "import folium\n",
+    "from folium import plugins\n",
+    "# Add custom basemaps to folium\n",
+    "basemaps = {\n",
+    "    'Google Maps': folium.TileLayer(\n",
+    "        tiles = 'https://mt1.google.com/vt/lyrs=m&x={x}&y={y}&z={z}',\n",
+    "        attr = 'Google',\n",
+    "        name = 'Google Maps',\n",
+    "        overlay = True,\n",
+    "        control = True\n",
+    "    ),\n",
+    "    'Google Satellite': folium.TileLayer(\n",
+    "        tiles = 'https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',\n",
+    "        attr = 'Google',\n",
+    "        name = 'Google Satellite',\n",
+    "        overlay = True,\n",
+    "        control = True\n",
+    "    ),\n",
+    "    'Google Terrain': folium.TileLayer(\n",
+    "        tiles = 'https://mt1.google.com/vt/lyrs=p&x={x}&y={y}&z={z}',\n",
+    "        attr = 'Google',\n",
+    "        name = 'Google Terrain',\n",
+    "        overlay = True,\n",
+    "        control = True\n",
+    "    ),\n",
+    "    'Google Satellite Hybrid': folium.TileLayer(\n",
+    "        tiles = 'https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}',\n",
+    "        attr = 'Google',\n",
+    "        name = 'Google Satellite',\n",
+    "        overlay = True,\n",
+    "        control = True\n",
+    "    ),\n",
+    "    'Esri Satellite': folium.TileLayer(\n",
+    "        tiles = 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',\n",
+    "        attr = 'Esri',\n",
+    "        name = 'Esri Satellite',\n",
+    "        overlay = True,\n",
+    "        control = True\n",
+    "    )\n",
+    "}\n",
+    "\n",
+    "# define a method for displaying Earth Engine image tiles on a folium map.\n",
+    "def add_ee_layer(self, ee_object, vis_params, name):\n",
+    "\n",
+    "    try:    \n",
+    "\n",
+    "        # display ee.Image()\n",
+    "        if isinstance(ee_object, ee.image.Image):    \n",
+    "            map_id_dict = ee.Image(ee_object).getMapId(vis_params)\n",
+    "            folium.raster_layers.TileLayer(\n",
+    "            tiles = map_id_dict['tile_fetcher'].url_format,\n",
+    "            attr = 'Google Earth Engine',\n",
+    "            name = name,\n",
+    "            overlay = True,\n",
+    "            control = True\n",
+    "            ).add_to(self)\n",
+    "\n",
+    "        # display ee.ImageCollection()\n",
+    "        elif isinstance(ee_object, ee.imagecollection.ImageCollection):    \n",
+    "            ee_object_new = ee_object.mosaic()\n",
+    "            map_id_dict = ee.Image(ee_object_new).getMapId(vis_params)\n",
+    "            folium.raster_layers.TileLayer(\n",
+    "            tiles = map_id_dict['tile_fetcher'].url_format,\n",
+    "            attr = 'Google Earth Engine',\n",
+    "            name = name,\n",
+    "            overlay = True,\n",
+    "            control = True\n",
+    "            ).add_to(self)\n",
+    "\n",
+    "        # display ee.Geometry()\n",
+    "        elif isinstance(ee_object, ee.geometry.Geometry):    \n",
+    "            folium.GeoJson(\n",
+    "            data = ee_object.getInfo(),\n",
+    "            name = name,\n",
+    "            overlay = True,\n",
+    "            control = True,\n",
+    "            style_function=lambda x:vis_params\n",
+    "        ).add_to(self)\n",
+    "\n",
+    "        # display ee.FeatureCollection()\n",
+    "        elif isinstance(ee_object, ee.featurecollection.FeatureCollection):  \n",
+    "            ee_object_new = ee.Image().paint(ee_object, 0, 2)\n",
+    "            map_id_dict = ee.Image(ee_object_new).getMapId(vis_params)\n",
+    "            folium.raster_layers.TileLayer(\n",
+    "            tiles = map_id_dict['tile_fetcher'].url_format,\n",
+    "            attr = 'Google Earth Engine',\n",
+    "            name = name,\n",
+    "            overlay = True,\n",
+    "            control = True\n",
+    "        ).add_to(self)\n",
+    "\n",
+    "    except:\n",
+    "        print(\"Could not display {}\".format(name))\n",
+    "\n",
+    "# add EE drawing method to folium.\n",
+    "folium.Map.add_ee_layer = add_ee_layer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_d4760ae11b787cac57758fd45509d2ba {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css&quot;/&gt;\n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_d4760ae11b787cac57758fd45509d2ba&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_d4760ae11b787cac57758fd45509d2ba = L.map(\n",
+       "                &quot;map_d4760ae11b787cac57758fd45509d2ba&quot;,\n",
+       "                {\n",
+       "                    center: [11.5, 104.0],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 12,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_95e25c978211508765b419191a9c8d8c = L.tileLayer(\n",
+       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_7ea485b6a4088a78e4b407b35c6458eb = L.tileLayer(\n",
+       "                &quot;https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Esri&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_d53316b558eb6c61520ca3c70cb233be = L.tileLayer(\n",
+       "                &quot;https://mt1.google.com/vt/lyrs=y\\u0026x={x}\\u0026y={y}\\u0026z={z}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "    \n",
+       "        function geo_json_c4aa2b995e0111ab8118abc861b9b021_styler(feature) {\n",
+       "            switch(feature.id) {\n",
+       "                default:\n",
+       "                    return {};\n",
+       "            }\n",
+       "        }\n",
+       "\n",
+       "        function geo_json_c4aa2b995e0111ab8118abc861b9b021_onEachFeature(feature, layer) {\n",
+       "            layer.on({\n",
+       "            });\n",
+       "        };\n",
+       "        var geo_json_c4aa2b995e0111ab8118abc861b9b021 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_c4aa2b995e0111ab8118abc861b9b021_onEachFeature,\n",
+       "            \n",
+       "                style: geo_json_c4aa2b995e0111ab8118abc861b9b021_styler,\n",
+       "        });\n",
+       "\n",
+       "        function geo_json_c4aa2b995e0111ab8118abc861b9b021_add (data) {\n",
+       "            geo_json_c4aa2b995e0111ab8118abc861b9b021\n",
+       "                .addData(data)\n",
+       "                .addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        }\n",
+       "            geo_json_c4aa2b995e0111ab8118abc861b9b021_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[104, 11.5], [106, 11.5], [106, 12.5], [104, 12.5], [104, 11.5]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_4ab1bb6a8d28ef5d5b476853e458d8c0 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/5519df0deb706b3d15f71a96d203e62b-a0dc75b7c200055bf8049fd064a01246/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "    \n",
+       "            var layer_control_170ff9a03031ab272b0732fcacc66901 = {\n",
+       "                base_layers : {\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_95e25c978211508765b419191a9c8d8c,\n",
+       "                },\n",
+       "                overlays :  {\n",
+       "                    &quot;Esri Satellite&quot; : tile_layer_7ea485b6a4088a78e4b407b35c6458eb,\n",
+       "                    &quot;Google Satellite&quot; : tile_layer_d53316b558eb6c61520ca3c70cb233be,\n",
+       "                    &quot;region&quot; : geo_json_c4aa2b995e0111ab8118abc861b9b021,\n",
+       "                    &quot;my_map&quot; : tile_layer_4ab1bb6a8d28ef5d5b476853e458d8c0,\n",
+       "                },\n",
+       "            };\n",
+       "            L.control.layers(\n",
+       "                layer_control_170ff9a03031ab272b0732fcacc66901.base_layers,\n",
+       "                layer_control_170ff9a03031ab272b0732fcacc66901.overlays,\n",
+       "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "    \n",
+       "            L.control.fullscreen(\n",
+       "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
+       "            ).addTo(map_d4760ae11b787cac57758fd45509d2ba);\n",
+       "        \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x25c187d18e0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lon_lat         =  [104, 11.5]\n",
+    "my_map = folium.Map(location= [lon_lat[1], lon_lat[0]], zoom_start=12)\n",
+    "basemaps['Esri Satellite'].add_to(my_map)\n",
+    "basemaps['Google Satellite Hybrid'].add_to(my_map)\n",
+    "vis    = {\"min\":0, \"max\":5 ,\"palette\":[\"ff4545\",\"a7ff7a\",\"1f1e6e\"]}\n",
+    "my_map.add_ee_layer(region, {}, 'region')\n",
+    "my_map.add_ee_layer(water_map,vis, 'my_map')\n",
+    "\n",
+    "my_map.add_child(folium.LayerControl())\n",
+    "plugins.Fullscreen().add_to(my_map)\n",
+    "\n",
+    "display(my_map)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "REACT",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
