--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,19 +97,40 @@
     "        ndvi = image.normalizedDifference(['nir', 'red']).select('nd').rename('ndvi')\n",
     "        return image.addBands(ndwi, ndvi)\n",
     "    return collection.map(calculateIndexes)\n",
+    "\n",
+    "\n",
+    "def exportYearly(yr, collection, region):    \n",
+    "    ts = ee.Date.fromYMD(yr, 9, 1)\n",
+    "    te = ts.advance(1, 'year')\n",
+    "    yearimg = collection.filterDate(ts, te).mean().set({\n",
+    "        'date': ts,\n",
+    "        'year': yr\n",
+    "    })\n",
+    "    task = ee.batch.Export.image.toAsset(\n",
+    "        image = yearimg,\n",
+    "        description= 'eflows-demo-tenryu-' + str(yr),\n",
+    "        # assetId= 'users/deltareseflows/tenryu-IAHR/' + 'tenryu-' + str(yr) + '-ndwi',\n",
+    "        assetId= 'users/mafmonjaraz/' + 'tenryu-' + str(yr) + '-ndwi',\n",
+    "        region= region,\n",
+    "        scale=30,\n",
+    "        crs= 'EPSG:32653',\n",
+    "        maxPixels= 1e13)\n",
+    "    task.start()\n",
+    "    return\n",
     "                         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "startyear= 1990\n",
-    "endyear  = 2020\n",
+    "startyear= 2022\n",
+    "endyear  = 2023\n",
     "monthList = ee.List.sequence(1,12,1)\n",
     "yearList = ee.List.sequence(startyear, endyear, 1)\n",
+    "tenryu   = ee.FeatureCollection(\"users/deltareseflows/tenryu-basin-bounds\")\n",
     "geometry = ee.Geometry.Polygon(\n",
     "        [[[137.79394768834086, 34.86437147904835],\n",
     "          [137.79669427037211, 34.853947959534395],\n",
@@ -141,68 +162,22 @@
     "          [137.83033990025493, 34.855072172059536],\n",
     "          [137.81351708531352, 34.86183343202275],\n",
     "          [137.81454705357524, 34.87929744779061],\n",
-    "          [137.79223107457133, 34.880142386722035]]])\n"
+    "          [137.79223107457133, 34.880142386722035]]])\n",
+    "lower    = geometry.intersection(tenryu.geometry(),1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "imageCollection   = getCollection(geometry, startyear, endyear)\n",
-    "single_image       = imageCollection.select('green').first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def exportYearly(yr, collection):    \n",
-    "    ts = ee.Date.fromYMD(yr, 9, 1)\n",
-    "    te = ts.advance(1, 'year')\n",
-    "    yearimg = collection.filterDate(ts, te).mean().set({\n",
-    "        'date': ts,\n",
-    "        'year': yr\n",
-    "    })\n",
-    "    return ts, te, yearimg\n",
-    "   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts, te, yearming =  exportYearly(2020, imageCollection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function exportYearly(yr){\n",
-    "  var ts = ee.Date.fromYMD(yr, 9, 1)\n",
-    "  var te = ts.advance(1, 'year')\n",
-    "  var yearimg = tyu.filterDate(ts, te).mean().set({\n",
-    "    date: ts,\n",
-    "    year: yr\n",
-    "    })\n",
-    "  Export.image.toAsset({\n",
-    "    image: yearimg,\n",
-    "    description: 'eflows-demo-tenryu-' + yr.toString(),\n",
-    "    assetId: 'users/deltareseflows/tenryu-IAHR/' + 'tenryu-' + yr.toString() + '-ndwi',\n",
-    "    region: lower,\n",
-    "    scale: 30,\n",
-    "    crs: 'EPSG:32653',\n",
-    "    maxPixels: 1e13\n",
-    "  })\n",
-    "}\n"
+    "single_image       = imageCollection.select('green').first()\n",
+    "\n",
+    "for year in range(startyear,endyear+1):\n",
+    "    exportYearly(year,imageCollection, lower)\n",
+    "  "
    ]
   },
   {
@@ -214,7 +189,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +373,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_5f08ee994422f5d996d2fb636c66feaf {\n",
+       "                #map_0013fe988d7948410cf223424bf2c172 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -365,14 +389,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_5f08ee994422f5d996d2fb636c66feaf&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_0013fe988d7948410cf223424bf2c172&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_5f08ee994422f5d996d2fb636c66feaf = L.map(\n",
-       "                &quot;map_5f08ee994422f5d996d2fb636c66feaf&quot;,\n",
+       "            var map_0013fe988d7948410cf223424bf2c172 = L.map(\n",
+       "                &quot;map_0013fe988d7948410cf223424bf2c172&quot;,\n",
        "                {\n",
        "                    center: [34.86437147904835, 137.79394768834086],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -386,83 +410,83 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_b587e9a9aed46585df781b3d3866234c = L.tileLayer(\n",
+       "            var tile_layer_e5d99502393e88b31ec9bf3291d7723b = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_fd2370774c8f2c93d2ae3c06ec816020 = L.tileLayer(\n",
+       "            var tile_layer_e35cffc8bcac8652eac6fe890150e03b = L.tileLayer(\n",
        "                &quot;https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Esri&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_efaea885efc61220904c06a3a9ca9eda = L.tileLayer(\n",
+       "            var tile_layer_c542f14a1954362035fd5aa358fda93a = L.tileLayer(\n",
        "                &quot;https://mt1.google.com/vt/lyrs=y\\u0026x={x}\\u0026y={y}\\u0026z={z}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "    \n",
-       "        function geo_json_fa04eaa4136b230ba8c97a81a952adb5_styler(feature) {\n",
+       "        function geo_json_a9c15cab2d11112f5e98c89816f0e945_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {};\n",
        "            }\n",
        "        }\n",
        "\n",
-       "        function geo_json_fa04eaa4136b230ba8c97a81a952adb5_onEachFeature(feature, layer) {\n",
+       "        function geo_json_a9c15cab2d11112f5e98c89816f0e945_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_fa04eaa4136b230ba8c97a81a952adb5 = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_fa04eaa4136b230ba8c97a81a952adb5_onEachFeature,\n",
+       "        var geo_json_a9c15cab2d11112f5e98c89816f0e945 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_a9c15cab2d11112f5e98c89816f0e945_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_fa04eaa4136b230ba8c97a81a952adb5_styler,\n",
+       "                style: geo_json_a9c15cab2d11112f5e98c89816f0e945_styler,\n",
        "        });\n",
        "\n",
-       "        function geo_json_fa04eaa4136b230ba8c97a81a952adb5_add (data) {\n",
-       "            geo_json_fa04eaa4136b230ba8c97a81a952adb5\n",
+       "        function geo_json_a9c15cab2d11112f5e98c89816f0e945_add (data) {\n",
+       "            geo_json_a9c15cab2d11112f5e98c89816f0e945\n",
        "                .addData(data)\n",
-       "                .addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "                .addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        }\n",
-       "            geo_json_fa04eaa4136b230ba8c97a81a952adb5_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[137.79394768834086, 34.86437147904835], [137.79669427037211, 34.853947959534395], [137.8066506302354, 34.85056707495847], [137.82038354039165, 34.85056707495847], [137.8238167679307, 34.834505976178946], [137.81695031285258, 34.80603914064101], [137.8172936356065, 34.7894054479401], [137.81145714879008, 34.77220165226879], [137.80253075718852, 34.74371329912516], [137.7905144608018, 34.70844182876761], [137.78673791050883, 34.69150617819119], [137.77815484166118, 34.659883691297125], [137.7798714554307, 34.641525818990495], [137.82244347691508, 34.642090737217515], [137.8238167679307, 34.65734207454119], [137.80596398472758, 34.660448484435065], [137.7963509476182, 34.664401928616506], [137.79875420689555, 34.68219009300521], [137.80459069371196, 34.701385728940906], [137.80905388951274, 34.71549732675007], [137.81386040806743, 34.73412094926915], [137.82107018589946, 34.74371329912516], [137.82519005894633, 34.762612611120225], [137.83136986851665, 34.78348145078419], [137.82759331822368, 34.79701517323708], [137.83239983677836, 34.81505668123394], [137.83342980504008, 34.833657849541886], [137.83033990025493, 34.855072172059536], [137.81351708531352, 34.86183343202275], [137.81454705357524, 34.87929744779061], [137.79223107457133, 34.880142386722035], [137.79394768834086, 34.86437147904835]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_a9c15cab2d11112f5e98c89816f0e945_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[137.79394768834086, 34.86437147904835], [137.79669427037211, 34.853947959534395], [137.8066506302354, 34.85056707495847], [137.82038354039165, 34.85056707495847], [137.8238167679307, 34.834505976178946], [137.81695031285258, 34.80603914064101], [137.8172936356065, 34.7894054479401], [137.81145714879008, 34.77220165226879], [137.80253075718852, 34.74371329912516], [137.7905144608018, 34.70844182876761], [137.78673791050883, 34.69150617819119], [137.77815484166118, 34.659883691297125], [137.7798714554307, 34.641525818990495], [137.82244347691508, 34.642090737217515], [137.8238167679307, 34.65734207454119], [137.80596398472758, 34.660448484435065], [137.7963509476182, 34.664401928616506], [137.79875420689555, 34.68219009300521], [137.80459069371196, 34.701385728940906], [137.80905388951274, 34.71549732675007], [137.81386040806743, 34.73412094926915], [137.82107018589946, 34.74371329912516], [137.82519005894633, 34.762612611120225], [137.83136986851665, 34.78348145078419], [137.82759331822368, 34.79701517323708], [137.83239983677836, 34.81505668123394], [137.83342980504008, 34.833657849541886], [137.83033990025493, 34.855072172059536], [137.81351708531352, 34.86183343202275], [137.81454705357524, 34.87929744779061], [137.79223107457133, 34.880142386722035], [137.79394768834086, 34.86437147904835]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_42919003eaf4caeffb34fcb7816b40d7 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/c75471277a17169d5eb03fe37896cb63-37180fab16b72571096d8f89613bcc5b/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_940d13ba125ca8fc49d0ab15470f71b8 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/45b6018e40c8bcf2ddec090c54290727-519f1c2a340d7233f0c8f9dbbed79cd7/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "    \n",
-       "            var layer_control_1970f33e02446e4a24c1042e9641af97 = {\n",
+       "            var layer_control_21f0f409fa1c075841bf11bf9ba3bc4e = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_b587e9a9aed46585df781b3d3866234c,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_e5d99502393e88b31ec9bf3291d7723b,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Esri Satellite&quot; : tile_layer_fd2370774c8f2c93d2ae3c06ec816020,\n",
-       "                    &quot;Google Satellite&quot; : tile_layer_efaea885efc61220904c06a3a9ca9eda,\n",
-       "                    &quot;geometry&quot; : geo_json_fa04eaa4136b230ba8c97a81a952adb5,\n",
-       "                    &quot;single_image&quot; : tile_layer_42919003eaf4caeffb34fcb7816b40d7,\n",
+       "                    &quot;Esri Satellite&quot; : tile_layer_e35cffc8bcac8652eac6fe890150e03b,\n",
+       "                    &quot;Google Satellite&quot; : tile_layer_c542f14a1954362035fd5aa358fda93a,\n",
+       "                    &quot;geometry&quot; : geo_json_a9c15cab2d11112f5e98c89816f0e945,\n",
+       "                    &quot;single_image&quot; : tile_layer_940d13ba125ca8fc49d0ab15470f71b8,\n",
        "                },\n",
        "            };\n",
        "            L.control.layers(\n",
-       "                layer_control_1970f33e02446e4a24c1042e9641af97.base_layers,\n",
-       "                layer_control_1970f33e02446e4a24c1042e9641af97.overlays,\n",
+       "                layer_control_21f0f409fa1c075841bf11bf9ba3bc4e.base_layers,\n",
+       "                layer_control_21f0f409fa1c075841bf11bf9ba3bc4e.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "    \n",
        "            L.control.fullscreen(\n",
        "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
-       "            ).addTo(map_5f08ee994422f5d996d2fb636c66feaf);\n",
+       "            ).addTo(map_0013fe988d7948410cf223424bf2c172);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x234a5a8e550>"
+       "<folium.folium.Map at 0x234a791b0d0>"
       ]
      },
      "metadata": {},
