--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getNDWI(img):\n",
+    "def getIndexes(img):\n",
     "    ndwi = img.addBands(\n",
     "        img.normalizedDifference(['green', 'nir']).select('nd').rename('ndwi')\n",
     "        )\n",
+    "    \n",
+    "    # mndwi = img.addBands(\n",
+    "    #     img.normalizedDifference(['green', 'swir']).select('nd').rename('mndwi')\n",
+    "    #     )\n",
     "    return ndwi\n",
+    "\n",
+    "\n",
     "\n",
     "def getcollection(ts, te, region):\n",
     "    \n",
@@ -53,7 +59,7 @@
     "        'percentile': 90,\n",
     "        'qualityBand': 'blue'\n",
     "        }\n",
-    "    ).map(lambda f: f.clip(region)).map(getNDWI)\n",
+    "    ).map(lambda f: f.clip(region)).map(getIndexes)\n",
     "\n",
     "    return col\n",
     "\n",
@@ -82,12 +88,12 @@
     "    \n",
     "    return overall.expression('water_sum/water_count',bands_for_expressions).rename(\"frequency\")\n",
     "\n",
-    "\n",
     "def downloadhydroperiodperyear(region,startyear,endyear,outputdir):  \n",
-    "    for yr in range(startyear,endyear+1):\n",
+    "    for yr in range(startyear,endyear):\n",
     "        ts = ee.Date.fromYMD(yr, 9, 1)\n",
     "        te = ts.advance(1, 'year')\n",
     "        col_filtered = getcollection(ts, te, region)\n",
+    "        print(col_filtered.size().getInfo())\n",
     "        frequency = hydroperiod(col_filtered, region)\n",
     "\n",
     "        name_file = \"frequency_maps_\"+ str(yr)\n",
@@ -109,79 +115,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('C:/Users/fuentesm/CISNE/REACT/Maps/River_mouth.geojson') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "coords = data['features'][0]['geometry']['coordinates']\n",
+    "region = ee.Geometry.Polygon(coords[0])\n",
+    "\n",
+    "# region    = ee.Geometry.Rectangle([137.767181,34.641682,137.842026,34.878045])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "frequency_maps_1990 has been downloaded successfully.\n",
-      "frequency_maps_1991 has been downloaded successfully.\n",
-      "frequency_maps_1992 has been downloaded successfully.\n",
-      "frequency_maps_1993 has been downloaded successfully.\n",
-      "frequency_maps_1994 has been downloaded successfully.\n",
-      "frequency_maps_1995 has been downloaded successfully.\n",
-      "frequency_maps_1996 has been downloaded successfully.\n",
-      "frequency_maps_1997 has been downloaded successfully.\n",
-      "frequency_maps_1998 has been downloaded successfully.\n",
-      "frequency_maps_1999 has been downloaded successfully.\n",
-      "frequency_maps_2000 has been downloaded successfully.\n",
-      "frequency_maps_2001 has been downloaded successfully.\n",
-      "frequency_maps_2002 has been downloaded successfully.\n",
-      "frequency_maps_2003 has been downloaded successfully.\n",
-      "frequency_maps_2004 has been downloaded successfully.\n",
-      "frequency_maps_2005 has been downloaded successfully.\n",
-      "frequency_maps_2006 has been downloaded successfully.\n",
-      "frequency_maps_2007 has been downloaded successfully.\n",
-      "frequency_maps_2008 has been downloaded successfully.\n",
-      "frequency_maps_2009 has been downloaded successfully.\n",
-      "frequency_maps_2010 has been downloaded successfully.\n",
-      "frequency_maps_2011 has been downloaded successfully.\n",
-      "frequency_maps_2012 has been downloaded successfully.\n",
-      "frequency_maps_2013 has been downloaded successfully.\n",
-      "frequency_maps_2014 has been downloaded successfully.\n",
-      "frequency_maps_2015 has been downloaded successfully.\n",
-      "frequency_maps_2016 has been downloaded successfully.\n",
-      "frequency_maps_2017 has been downloaded successfully.\n",
-      "frequency_maps_2018 has been downloaded successfully.\n",
-      "frequency_maps_2019 has been downloaded successfully.\n",
-      "frequency_maps_2020 has been downloaded successfully.\n",
-      "frequency_maps_2021 has been downloaded successfully.\n",
-      "frequency_maps_2022 has been downloaded successfully.\n"
-     ]
-    },
-    {
-     "ename": "EEException",
-     "evalue": "Image.select: Pattern 'water_sum' did not match any bands.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\ee\\data.py:337\u001b[0m, in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    336\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 337\u001b[0m   \u001b[39mreturn\u001b[39;00m call\u001b[39m.\u001b[39;49mexecute(num_retries\u001b[39m=\u001b[39;49mnum_retries)\n\u001b[0;32m    338\u001b[0m \u001b[39mexcept\u001b[39;00m googleapiclient\u001b[39m.\u001b[39merrors\u001b[39m.\u001b[39mHttpError \u001b[39mas\u001b[39;00m e:\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\googleapiclient\\_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[1;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\googleapiclient\\http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[1;34m(self, http, num_retries)\u001b[0m\n\u001b[0;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[0;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[1;31mHttpError\u001b[0m: <HttpError 400 when requesting https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails?fields=name&alt=json returned \"Image.select: Pattern 'water_sum' did not match any bands.\". Details: \"Image.select: Pattern 'water_sum' did not match any bands.\">",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mEEException\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[135], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m region    \u001b[39m=\u001b[39m ee\u001b[39m.\u001b[39mGeometry\u001b[39m.\u001b[39mRectangle([\u001b[39m137.767181\u001b[39m,\u001b[39m34.641682\u001b[39m,\u001b[39m137.842026\u001b[39m,\u001b[39m34.878045\u001b[39m])\n\u001b[0;32m      4\u001b[0m outputdir \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mC:/Users/fuentesm/CISNE/REACT/Maps/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> 6\u001b[0m downloadhydroperiodperyear(region,start,end,outputdir)\n",
-      "Cell \u001b[1;32mIn[134], line 63\u001b[0m, in \u001b[0;36mdownloadhydroperiodperyear\u001b[1;34m(region, startyear, endyear, outputdir)\u001b[0m\n\u001b[0;32m     60\u001b[0m name_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mfrequency_maps_\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(yr)\n\u001b[0;32m     61\u001b[0m file_path_tiff \u001b[39m=\u001b[39m outputdir \u001b[39m+\u001b[39m name_file \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.tiff\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 63\u001b[0m urlD \u001b[39m=\u001b[39m frequency\u001b[39m.\u001b[39;49mgetDownloadUrl({\u001b[39m'\u001b[39;49m\u001b[39mbands\u001b[39;49m\u001b[39m'\u001b[39;49m : \u001b[39m'\u001b[39;49m\u001b[39mfrequency\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     64\u001b[0m                                  \u001b[39m'\u001b[39;49m\u001b[39mregion\u001b[39;49m\u001b[39m'\u001b[39;49m: region,\n\u001b[0;32m     65\u001b[0m                                  \u001b[39m'\u001b[39;49m\u001b[39mscale\u001b[39;49m\u001b[39m'\u001b[39;49m : \u001b[39m30\u001b[39;49m,\n\u001b[0;32m     66\u001b[0m                                  \u001b[39m'\u001b[39;49m\u001b[39mformat\u001b[39;49m\u001b[39m'\u001b[39;49m: \u001b[39m'\u001b[39;49m\u001b[39mGEO_TIFF\u001b[39;49m\u001b[39m'\u001b[39;49m})\n\u001b[0;32m     68\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m     urllib\u001b[39m.\u001b[39mrequest\u001b[39m.\u001b[39murlretrieve(urlD, file_path_tiff)\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\ee\\deprecation.py:32\u001b[0m, in \u001b[0;36mDeprecated.<locals>.Decorator.<locals>.Wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mWrapper\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m     27\u001b[0m   warnings\u001b[39m.\u001b[39mwarn_explicit(\n\u001b[0;32m     28\u001b[0m       \u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m() is deprecated: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m (func\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, message),\n\u001b[0;32m     29\u001b[0m       category\u001b[39m=\u001b[39m\u001b[39mDeprecationWarning\u001b[39;00m,\n\u001b[0;32m     30\u001b[0m       filename\u001b[39m=\u001b[39mfunc\u001b[39m.\u001b[39m\u001b[39m__code__\u001b[39m\u001b[39m.\u001b[39mco_filename,\n\u001b[0;32m     31\u001b[0m       lineno\u001b[39m=\u001b[39mfunc\u001b[39m.\u001b[39m\u001b[39m__code__\u001b[39m\u001b[39m.\u001b[39mco_firstlineno \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m---> 32\u001b[0m   \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\ee\\image.py:469\u001b[0m, in \u001b[0;36mImage.getDownloadURL\u001b[1;34m(self, params)\u001b[0m\n\u001b[0;32m    467\u001b[0m request \u001b[39m=\u001b[39m params \u001b[39mor\u001b[39;00m {}\n\u001b[0;32m    468\u001b[0m request[\u001b[39m'\u001b[39m\u001b[39mimage\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n\u001b[1;32m--> 469\u001b[0m \u001b[39mreturn\u001b[39;00m data\u001b[39m.\u001b[39mmakeDownloadUrl(data\u001b[39m.\u001b[39;49mgetDownloadId(request))\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\ee\\data.py:1159\u001b[0m, in \u001b[0;36mgetDownloadId\u001b[1;34m(params)\u001b[0m\n\u001b[0;32m   1154\u001b[0m queryParams \u001b[39m=\u001b[39m {\n\u001b[0;32m   1155\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mfields\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m   1156\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mbody\u001b[39m\u001b[39m'\u001b[39m: request,\n\u001b[0;32m   1157\u001b[0m }\n\u001b[0;32m   1158\u001b[0m _maybe_populate_workload_tag(queryParams)\n\u001b[1;32m-> 1159\u001b[0m result \u001b[39m=\u001b[39m _execute_cloud_call(\n\u001b[0;32m   1160\u001b[0m     _get_cloud_api_resource()\u001b[39m.\u001b[39;49mprojects()\u001b[39m.\u001b[39;49mthumbnails()\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m   1161\u001b[0m         parent\u001b[39m=\u001b[39;49m_get_projects_path(), \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mqueryParams))\n\u001b[0;32m   1162\u001b[0m \u001b[39mreturn\u001b[39;00m {\u001b[39m'\u001b[39m\u001b[39mdocid\u001b[39m\u001b[39m'\u001b[39m: result[\u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m], \u001b[39m'\u001b[39m\u001b[39mtoken\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m}\n",
-      "File \u001b[1;32mc:\\Users\\fuentesm\\Anaconda3\\envs\\REACT\\lib\\site-packages\\ee\\data.py:339\u001b[0m, in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    337\u001b[0m   \u001b[39mreturn\u001b[39;00m call\u001b[39m.\u001b[39mexecute(num_retries\u001b[39m=\u001b[39mnum_retries)\n\u001b[0;32m    338\u001b[0m \u001b[39mexcept\u001b[39;00m googleapiclient\u001b[39m.\u001b[39merrors\u001b[39m.\u001b[39mHttpError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m--> 339\u001b[0m   \u001b[39mraise\u001b[39;00m _translate_cloud_exception(e)\n",
-      "\u001b[1;31mEEException\u001b[0m: Image.select: Pattern 'water_sum' did not match any bands."
+      "158\n",
+      "frequency_maps_2021 has been downloaded successfully.\n"
      ]
     }
    ],
    "source": [
-    "start     = 1990\n",
-    "end       = 2023\n",
-    "region    = ee.Geometry.Rectangle([137.767181,34.641682,137.842026,34.878045])\n",
+    "start     = 2021\n",
+    "end       = 2022\n",
+    "band      = 'ndwi'\n",
+    "\n",
     "outputdir = 'C:/Users/fuentesm/CISNE/REACT/Maps/'\n",
     "\n",
     "downloadhydroperiodperyear(region,start,end,outputdir)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
