--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getIndexes(img):\n",
+    "def getndwi(img):\n",
     "    ndwi = img.addBands(\n",
     "        img.normalizedDifference(['green', 'nir']).select('nd').rename('ndwi')\n",
     "        )\n",
-    "    \n",
-    "    # mndwi = img.addBands(\n",
-    "    #     img.normalizedDifference(['green', 'swir']).select('nd').rename('mndwi')\n",
-    "    #     )\n",
-    "    return ndwi\n",
+    "    return  ndwi\n",
+    "\n",
+    "def getmndwi(img):\n",
+    "    mndwi = img.addBands(\n",
+    "        img.normalizedDifference(['green', 'swir']).select('nd').rename('mndwi')\n",
+    "        )\n",
+    "    return  mndwi\n",
     "\n",
     "\n",
     "\n",
@@ -59,17 +61,17 @@
     "        'percentile': 90,\n",
     "        'qualityBand': 'blue'\n",
     "        }\n",
-    "    ).map(lambda f: f.clip(region)).map(getIndexes)\n",
+    "    ).map(lambda f: f.clip(region)).map(getndwi).map(getmndwi)\n",
     "\n",
     "    return col\n",
     "\n",
-    "def hydroperiod(col, region):\n",
+    "def hydroperiod(col, region, band):\n",
     "\n",
     "    def applyOtsu(img):\n",
     "        otsu = hf.edge_otsu(\n",
     "            img,\n",
     "            region=region,\n",
-    "            band='ndwi',\n",
+    "            band=band,\n",
     "            thresh_no_data=-0.2,\n",
     "            # edge_buffer=300,\n",
     "            invert=True)\n",
@@ -86,36 +88,44 @@
     "                            'water_count': overall.select('water_count'),\n",
     "                            }\n",
     "    \n",
-    "    return overall.expression('water_sum/water_count',bands_for_expressions).rename(\"frequency\")\n",
+    "    frequency = overall.expression('water_sum/water_count',bands_for_expressions).rename(\"frequency\")\n",
+    "    return otsu_col_sum, otsu_col_count, frequency\n",
     "\n",
-    "def downloadhydroperiodperyear(region,startyear,endyear,outputdir):  \n",
-    "    for yr in range(startyear,endyear):\n",
-    "        ts = ee.Date.fromYMD(yr, 9, 1)\n",
+    "def downloadhydroperiodperyear(region,startyear,endyear,outputdir, id, band):  \n",
+    "    for yr in range(startyear,endyear+1):\n",
+    "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
     "        te = ts.advance(1, 'year')\n",
     "        col_filtered = getcollection(ts, te, region)\n",
     "        print(col_filtered.size().getInfo())\n",
-    "        frequency = hydroperiod(col_filtered, region)\n",
+    "        sum, count, frequency = hydroperiod(col_filtered, region, band)\n",
     "\n",
-    "        name_file = \"frequency_maps_\"+ str(yr)\n",
-    "        file_path_tiff = outputdir + name_file + \".tiff\"\n",
+    "        name_file_frequency = \"frequency_maps_\"+ str(yr) +'_'+ id\n",
+    "        name_file_sum       = \"sum_maps_\"+ str(yr) +'_'+ id\n",
+    "        name_file_count     = \"count_maps_\"+ str(yr) +'_'+ id\n",
     "\n",
-    "        urlD = frequency.getDownloadUrl({'bands' : 'frequency',\n",
-    "                                         'region': region,\n",
-    "                                         'scale' : 30,\n",
-    "                                         'format': 'GEO_TIFF'})\n",
+    "        def downloadurl(img, name_file,band):\n",
+    "            file_path_tiff = outputdir + name_file + \".tiff\"\n",
+    "            urlD = img.getDownloadUrl({'bands' : band,\n",
+    "                                            'region': region,\n",
+    "                                            'scale' : 30,\n",
+    "                                            'format': 'GEO_TIFF'})\n",
+    "            \n",
+    "            try:\n",
+    "                urllib.request.urlretrieve(urlD, file_path_tiff)\n",
+    "                print(f\"{name_file} has been downloaded successfully.\")\n",
+    "            except:\n",
+    "                print(f\"Failed to download {name_file}.\")\n",
+    "            return  \n",
     "        \n",
-    "        try:\n",
-    "            urllib.request.urlretrieve(urlD, file_path_tiff)\n",
-    "            print(f\"{name_file} has been downloaded successfully.\")\n",
-    "        except:\n",
-    "            print(f\"Failed to download {name_file}.\")\n",
-    "        \n",
+    "        downloadurl(frequency, name_file_frequency,'frequency')\n",
+    "        downloadurl(sum,name_file_sum,'water_sum')\n",
+    "        downloadurl(count, name_file_count,'water_count')\n",
     "    return\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,26 +142,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "158\n",
-      "frequency_maps_2021 has been downloaded successfully.\n"
+      "165\n",
+      "frequency_maps_2021_v1 has been downloaded successfully.\n",
+      "sum_maps_2021_v1 has been downloaded successfully.\n",
+      "count_maps_2021_v1 has been downloaded successfully.\n",
+      "151\n",
+      "frequency_maps_2022_v1 has been downloaded successfully.\n",
+      "sum_maps_2022_v1 has been downloaded successfully.\n",
+      "count_maps_2022_v1 has been downloaded successfully.\n"
      ]
     }
    ],
    "source": [
     "start     = 2021\n",
     "end       = 2022\n",
-    "band      = 'ndwi'\n",
+    "band      ='ndwi'\n",
     "\n",
     "outputdir = 'C:/Users/fuentesm/CISNE/REACT/Maps/'\n",
     "\n",
-    "downloadhydroperiodperyear(region,start,end,outputdir)\n"
+    "downloadhydroperiodperyear(region,start,end,outputdir, 'v1', band)\n"
    ]
   },
   {
