--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,6 @@
     "        img.normalizedDifference(['green', 'swir']).select('nd').rename('mndwi')\n",
     "        )\n",
     "    return  mndwi\n",
-    "\n",
-    "\n",
     "\n",
     "def getcollection(ts, te, region):\n",
     "    \n",
@@ -91,6 +89,60 @@
     "    frequency = overall.expression('water_sum/water_count',bands_for_expressions).rename(\"frequency\")\n",
     "    return otsu_col_sum, otsu_col_count, frequency\n",
     "\n",
+    "\n",
+    "def annualotsu(col_mean, region, band):\n",
+    "    def applyOtsu(img):\n",
+    "        otsu = hf.edge_otsu(\n",
+    "            img,\n",
+    "            region=region,\n",
+    "            band=band,\n",
+    "            thresh_no_data=-0.2,\n",
+    "            # edge_buffer=300,\n",
+    "            invert=True)\n",
+    "        return otsu\n",
+    "    \n",
+    "    otsu_col        = applyOtsu(col_mean)\n",
+    "    otsu_col_annual = otsu_col.rename('water_annual').select('water_annual')\n",
+    "    return otsu_col_annual \n",
+    "\n",
+    "def erotionacretion(region,startyear,endyear,band): \n",
+    "    images_annual_otsu = []\n",
+    "    for yr in range(startyear,endyear+1):\n",
+    "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
+    "        te = ts.advance(1, 'year')\n",
+    "        col_filtered = getcollection(ts, te, region).select(band).mean()\n",
+    "        globals()['annualotsu_%s' %str(yr)] = annualotsu(col_filtered, region, band)\n",
+    "        images_annual_otsu.append(globals()['annualotsu_%s' %str(yr)])\n",
+    "    return images_annual_otsu\n",
+    "\n",
+    "\n",
+    "def downloadurl(img, name_file,band, outputdir):\n",
+    "    file_path_tiff = outputdir + name_file + \".tiff\"\n",
+    "    urlD = img.getDownloadUrl({'bands' : band,\n",
+    "                                    'region': region,\n",
+    "                                    'scale' : 30,\n",
+    "                                    'format': 'GEO_TIFF'})\n",
+    "    \n",
+    "    try:\n",
+    "        urllib.request.urlretrieve(urlD, file_path_tiff)\n",
+    "        print(f\"{name_file} has been downloaded successfully.\")\n",
+    "    except:\n",
+    "        print(f\"Failed to download {name_file}.\")\n",
+    "    return  \n",
+    "\n",
+    "\n",
+    "def downloaderotionacretion(region,startyear,endyear,outputdir, id, band): \n",
+    "    list_images = erotionacretion(region,startyear,endyear,band)\n",
+    "    # image_collection = ee.ImageCollection.fromImages(list_images)\n",
+    "    for yr in range(startyear,endyear+1):\n",
+    "        for ind in range(len(list_images)-1): \n",
+    "            diff_image = list_images[ind+1].subtract(list_images[ind])\n",
+    "            diff_image = diff_image.rename('water_difference').select('water_difference')\n",
+    "            name_file_frequency = \"erosion_accretion_\"+ str(yr) +'_'+ id\n",
+    "            \n",
+    "            downloadurl(diff_image, name_file_frequency,'water_difference', outputdir)\n",
+    "    return\n",
+    "\n",
     "def downloadhydroperiodperyear(region,startyear,endyear,outputdir, id, band):  \n",
     "    for yr in range(startyear,endyear+1):\n",
     "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
@@ -103,29 +155,17 @@
     "        name_file_sum       = \"sum_maps_\"+ str(yr) +'_'+ id\n",
     "        name_file_count     = \"count_maps_\"+ str(yr) +'_'+ id\n",
     "\n",
-    "        def downloadurl(img, name_file,band):\n",
-    "            file_path_tiff = outputdir + name_file + \".tiff\"\n",
-    "            urlD = img.getDownloadUrl({'bands' : band,\n",
-    "                                            'region': region,\n",
-    "                                            'scale' : 30,\n",
-    "                                            'format': 'GEO_TIFF'})\n",
-    "            \n",
-    "            try:\n",
-    "                urllib.request.urlretrieve(urlD, file_path_tiff)\n",
-    "                print(f\"{name_file} has been downloaded successfully.\")\n",
-    "            except:\n",
-    "                print(f\"Failed to download {name_file}.\")\n",
-    "            return  \n",
+    "\n",
     "        \n",
-    "        downloadurl(frequency, name_file_frequency,'frequency')\n",
-    "        downloadurl(sum,name_file_sum,'water_sum')\n",
-    "        downloadurl(count, name_file_count,'water_count')\n",
+    "        downloadurl(frequency, name_file_frequency,'frequency',outputdir)\n",
+    "        downloadurl(sum,name_file_sum,'water_sum',outputdir)\n",
+    "        downloadurl(count, name_file_count,'water_count',outputdir)\n",
     "    return\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,21 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "165\n",
-      "frequency_maps_2021_v1 has been downloaded successfully.\n",
-      "sum_maps_2021_v1 has been downloaded successfully.\n",
-      "count_maps_2021_v1 has been downloaded successfully.\n",
-      "151\n",
-      "frequency_maps_2022_v1 has been downloaded successfully.\n",
-      "sum_maps_2022_v1 has been downloaded successfully.\n",
-      "count_maps_2022_v1 has been downloaded successfully.\n"
+      "erosion_accretion_2021_v1 has been downloaded successfully.\n",
+      "erosion_accretion_2022_v1 has been downloaded successfully.\n"
      ]
     }
    ],
@@ -167,7 +201,8 @@
     "\n",
     "outputdir = 'C:/Users/fuentesm/CISNE/REACT/Maps/'\n",
     "\n",
-    "downloadhydroperiodperyear(region,start,end,outputdir, 'v1', band)\n"
+    "# downloadhydroperiodperyear(region,start,end,outputdir, 'v1', band)\n",
+    "downloaderotionacretion(region,start,end,outputdir, 'v1', band)\n"
    ]
   },
   {
@@ -176,6 +211,68 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n",
+      "151\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_images = erotionacretion(region,start,end,outputdir, 'v1', band)\n",
+    "image_collection = ee.ImageCollection.fromImages(list_images)\n",
+    "\n",
+    "for ind in range(len(list_images)-1): \n",
+    "    images_erosion_accretion = []\n",
+    "    diff_image = list_images[ind+1].subtract(list_images[ind])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        globals()['annualotsu_%s' %str(yr)] = annualotsu(col_filtered, region, band)\n",
+    "        images_annual_otsu.append(globals()['annualotsu_%s' %str(yr)])"
+   ]
   },
   {
    "cell_type": "code",
